--- a/.env.sample
+++ b/.env.sample
@@ -1,3 +1,4 @@
 DEEPSEEK_API_KEY=yoursecret_key
 HUGGINGFACE_API_KEY=your_secret_key
 LOCAL_MODEL_NAME=your_local_model
+OPENAI_API_KEY=your_secret_key
