--- a/requirements.txt
+++ b/requirements.txt
@@ -1,13 +1,13 @@
 pandas>=1.3.0
 numpy>=1.21.0
 sentence-transformers>=2.2.2
-faiss-gpu>=1.9.0
 langchain>=0.1.0
-openai>=1.0.0
-gradio>=5.11.0  # For building web UIs
-
+gradio>=5.11.0
 faiss~=1.9.0
 faiss-cpu~=1.10.0
 scikit-learn~=1.6.1
 torch~=2.5.1+cu118
 langchain-community~=0.3.20
+python-dotenv~=1.0.1
+langchain-openai~=0.3.11
+langchain_deepseek~=0.1.3
